--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "RestClient",
     "autoload": {
         "psr-4": {
-            "RestClient\\": "RestClient/"
+            "RestClient\\": "RestClient/",
+            "Controllers\\": "Controllers/"
         }
     }
 }
