improvements in DB and Request

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "autoload": {
         "psr-4": {
             "RestClient\\": "RestClient/",
-            "Controllers\\": "Controllers/"
+            "Controllers\\": "Controllers/",
+            "Config\\": "Config/"
         }
     }
 }
