--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
             "RestClient\\": "RestClient/",
             "Controllers\\": "Controllers/",
             "Config\\": "Config/",
-            "Models\\": "Models/"
+            "Models\\": "Models/",
+            "Data\\": "Data/"
         }
     }
 }
