--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,17 @@
 {
-    "name": "RestClient",
+    "name": "alinawaz/panther",
     "autoload": {
         "psr-4": {
             "System\\": "system/",
             "Src\\": "src/",
             "Config\\": "config/"
         }
+    },
+    "require": {
+        "php": "^5.4 || ^7.0",
+        "symfony/console": "~3.3"
+    },
+    "require-dev": {
+        "fzaninotto/faker": "~1.4"
     }
 }
